[package]
name = "baembal"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "baembal"
crate-type = ["cdylib"]

[dependencies]
rustpython-parser = { git = "https://github.com/RustPython/Parser.git", rev = "d23611db65dca2a71eb58fdcdce9d637f8fef8c2" }
rustpython-ast = { git = "https://github.com/RustPython/Parser.git", rev = "d23611db65dca2a71eb58fdcdce9d637f8fef8c2" }
rustpython-ast-pyo3 = { git = "https://github.com/RustPython/Parser.git", rev = "d23611db65dca2a71eb58fdcdce9d637f8fef8c2", features = ["wrapper"]}
pyo3 = { version = "0.18.3", features = ["num-bigint", "num-complex"] }

# rustpython-parser = { path = "../RustPython-parser/parser" }
# rustpython-ast = { path = "../RustPython-parser/ast" }
# rustpython-ast-pyo3 = { path = "../RustPython-parser/ast-pyo3", features = ["wrapper"]}
